============ Version 1.5.4

2006-07-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.5.4, upgrade the xine-lib requirements, so I don't
	get loads of bug reports about crashes on startup

============ Version 1.5.3

2006-07-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.5.3

2006-07-10  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_reconfigure_tick_timeout), (bvw_bus_message_cb):
	  Do keep emitting tick timeouts with the current position
	  and duration of the file even in PAUSED state, needed 
	  for things like the 'Skip To' dialog (#313739).

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add audio/ac3

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add audio/x-ape

2006-07-06  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_realize): Fix warning on exit with GtkStyle,
	with GTK+ 2.10, patch from Rene Vahtel <vahtel@starman.ee>
	(Closes: #346762)

2006-07-03  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-viewer.c: (main): add i18n support
	(Closes: #346492)

2006-07-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_set_logo):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_expose), (show_vfx_update),
	(bacon_video_widget_set_logo_mode):
	* src/totem.c: (totem_action_set_mrl_with_warning), (main):
	* src/vanity.c: (video_widget_create):
	Change the semantics for the logo-related functions, set the logo
	only once, and only change the logo mode for the expose mode.
	Fixes the GStreamer backend leaking one huge pixbuf per set_logo call,
	Shows the logo when no viz is selected and playing audio with the
	xine-lib backend

2006-06-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: