@@ -1,3 +1,8 @@
+2006-07-10  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-playlist.c: (totem_playlist_save_files):
+	Add a default filename for the save playlist dialogue
+
 ============ Version 1.5.4
 
 2006-07-10  Bastien Nocera  <hadess@hadess.net>
